j--/tests/pass/Not.java
package pass;

public class Not {

	public int not(int a) {
		return ~a;
	}

}
