j--/tests/fail/Not.java
package fail;

public class Not {

	public static void main(String args[]) {
		System.out.println(~"coucou");
	}

}
